--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section id="hero" class="section">
         <div class="container hero-content">
             <div class="hero-text">
-                <h1 class="hero-title">Olá, eu sou <span>João Antônio Neves</span>.<br></h1>
+                <h1 class="hero-title">Olá, eu sou <span>João Antônio Neves.</span><br></h1>
                 <p class="hero-subtitle">Com uma inovação, transformo ideias complexas em interfaces intuitivas e soluções de frontend robustas, definindo o futuro da interação digital.</p>
                 <div class="hero-btns">
                     <a href="#projects" class="btn btn-primary">Ver Portfólio <i class="fas fa-arrow-right"></i></a>
@@ -236,53 +236,10 @@
     </section>
 
     <section id="testimonials" class="section">
-        <div class="container testimonials-container">
-            <h2 class="section-title">O Que Dizem Meus Clientes</h2>
-            <div class="testimonial-carousel">
-                <div class="testimonial-card">
-                    <blockquote>"João Neves é um verdadeiro mestre! Ele transformou nossa visão em uma realidade digital que superou todas as expectativas. Sua expertise em UX/UI e frontend é incomparável. Nosso ROI disparou!"</blockquote>
-                    <div class="testimonial-author">
-                        <img src="https://picsum.photos/80/80?random=9" alt="Foto de perfil de Maria Silva">
-                        <div class="author-info">
-                            <h4>Maria Silva</h4>
-                            <p>CEO, TechSolutions</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <blockquote>"Trabalhar com o João foi uma experiência transformadora. A atenção aos detalhes, a criatividade e a capacidade de resolver problemas complexos com elegância são simplesmente geniais. Ele é o futuro do desenvolvimento web!"</blockquote>
-                    <div class="testimonial-author">
-                        <img src="https://picsum.photos/80/80?random=10" alt="Foto de perfil de Carlos Oliveira">
-                        <div class="author-info">
-                            <h4>Carlos Oliveira</h4>
-                            <p>Diretor de Produto, InnovateCorp</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <blockquote>"Nunca vi um profissional tão dedicado e talentoso quanto João. Ele não só entregou um produto de altíssima qualidade, como também nos guiou em cada etapa, garantindo que o resultado final fosse perfeito. Absolutamente recomendo!"</blockquote>
-                    <div class="testimonial-author">
-                        <img src="https://picsum.photos/80/80?random=11" alt="Foto de perfil de Ana Costa">
-                        <div class="author-info">
-                            <h4>Ana Costa</h4>
-                            <p>Fundadora, CreativeHub</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="testimonial-card">
-                    <blockquote>"João Neves eleva o padrão de tudo que toca. Sua habilidade em criar experiências digitais que não só são funcionais, mas também emocionalmente envolventes, é o que o diferencia. Um parceiro indispensável para qualquer projeto ambicioso."</blockquote>
-                    <div class="testimonial-author">
-                        <img src="https://picsum.photos/80/80?random=12" alt="Foto de perfil de Pedro Santos">
-                        <div class="author-info">
-                            <h4>Pedro Santos</h4>
-                            <p>CTO, FutureLeap</p>
-                        </div>
-                    </div>
-                </div>
+        <h2 class="section-title">Matérias:</h2>
+        <div class="projects-btn">
+                <a href="./materias/principal.html" class="btn btn-primary">Ver Todas as Matérias <i class="fas fa-plus-circle"></i></a>
             </div>
-        </div>
-        <div class="testimonial-shape testimonial-shape-1"></div>
-        <div class="testimonial-shape testimonial-shape-2"></div>
     </section>
 
     <section id="blog" class="section">
@@ -404,7 +361,7 @@
                     <li><a href="#about">Sobre</a></li>
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#projects">Projetos</a></li>
-                    <li><a href="#testimonials">Testemunhos</a></li>
+                    <li><a href="#testimonials">Matérias</a></li>
                     <li><a href="#blog">Blog</a></li>
                     <li><a href="#contact">Contato</a></li>
                 </ul>
