--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             </div>
             <div class="about-text">
                 <h2 class="section-title">Sobre Mim:</h2>
-                <p>Sou <strong>João Antônio Neves</strong>, e minha paixão é esculpir o futuro digita. Sempre com o foco em entregar não apenas código, mas sim <strong>experiências que encantam e convertem</strong>.</p>
+                <p>Sou <strong>João Antônio Neves</strong>, e minha paixão é esculpir o futuro digital. Sempre com o foco em entregar não apenas código, mas sim <strong>experiências que encantam e convertem</strong>.</p>
                 <p>Acredito que a tecnologia deve ser uma ponte para a simplicidade e a beleza. Cada pixel, cada linha de código, é pensada para otimizar a usabilidade e a estética, resultando em produtos digitais que não só funcionam perfeitamente, mas também <strong>inspiram e deixam uma marca</strong>.</p>
                 <div class="skills">
     <h4>Minhas Habilidades Insuperáveis:</h4>
