--- a/index.html
+++ b/index.html
@@ -235,12 +235,86 @@
         <div class="projects-shape projects-shape-2"></div>
     </section>
 
-    <section id="testimonials" class="section">
-        <h2 class="section-title">Matérias:</h2>
-        <div class="projects-btn">
-                <a href="./materias/principal.html" class="btn btn-primary">Ver Todas as Matérias <i class="fas fa-plus-circle"></i></a>
+   <section id="testimonials" class="section">
+    <div class="container">
+        <h2 class="section-title">Matérias que Constroem Meu Conhecimento</h2>
+        <p class="section-subtitle">Disciplinas acadêmicas e habilidades técnicas que me permitem criar soluções completas e inovadoras.</p>
+        
+        <div class="materias-grid">
+            <!-- Grupo 1: Núcleo Duro (Frontend/UX) -->
+            <div class="materia-card">
+                <div class="materia-icon"><i class="fas fa-laptop-code"></i></div>
+                <h3>Técnicas Avançadas de Programação Web/Mobile</h3>
+                <ul>
+                    <li>Frameworks modernos (React, Vue, Angular)</li>
+                    <li>PWA e Responsividade</li>
+                    <li>Integração com Backend</li>
+                </ul>
             </div>
-    </section>
+
+            <!-- Grupo 2: Banco de Dados -->
+            <div class="materia-card">
+                <div class="materia-icon"><i class="fas fa-database"></i></div>
+                <h3>Bancos de Dados Relacionais & Não-Relacionais</h3>
+                <ul>
+                    <li>SQL (PostgreSQL, MySQL)</li>
+                    <li>NoSQL (MongoDB, Firebase)</li>
+                    <li>Otimização de queries</li>
+                </ul>
+            </div>
+
+            <!-- Grupo 3: UX/Interação -->
+            <div class="materia-card">
+                <div class="materia-icon"><i class="fas fa-user-circle"></i></div>
+                <h3>Interação Humano-Computador</h3>
+                <ul>
+                    <li>Design Centrado no Usuário</li>
+                    <li>Testes de Usabilidade</li>
+                    <li>Prototipação (Figma, Adobe XD)</li>
+                </ul>
+            </div>
+
+            <!-- Grupo 4: Engenharia de Software -->
+            <div class="materia-card">
+                <div class="materia-icon"><i class="fas fa-cogs"></i></div>
+                <h3>Engenharia de Software & Gestão Ágil</h3>
+                <ul>
+                    <li>Metodologias Scrum/Kanban</li>
+                    <li>CI/CD e DevOps</li>
+                    <li>Arquitetura Limpa (Clean Code)</li>
+                </ul>
+            </div>
+
+            <!-- Grupo 5: Fundamentos -->
+            <div class="materia-card">
+                <div class="materia-icon"><i class="fas fa-project-diagram"></i></div>
+                <h3>Estrutura de Dados & Matemática Discreta</h3>
+                <ul>
+                    <li>Algoritmos de otimização</li>
+                    <li>Grafos e Árvores</li>
+                    <li>Lógica para Frontend</li>
+                </ul>
+            </div>
+
+            <!-- Grupo 6: Negócios -->
+            <div class="materia-card">
+                <div class="materia-icon"><i class="fas fa-chart-line"></i></div>
+                <h3>Inteligência Corporativa & Modelos de Negócios</h3>
+                <ul>
+                    <li>Análise de Dados para UX</li>
+                    <li>MVP e Validação de Produtos</li>
+                    <li>Estratégias Digitais</li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="projects-btn">
+            <a href="./materias/principal.html" class="btn btn-outline">
+                <i class="fas fa-book-open"></i> Ver Detalhes das Matérias
+            </a>
+        </div>
+    </div>
+</section>
 
     <section id="blog" class="section">
         <div class="container blog-container">
