--- a/ler_mais/tendencias-frontend-2025.html
+++ b/ler_mais/tendencias-frontend-2025.html
@@ -20,7 +20,7 @@
     <header class="header">
         <div class="container">
             <nav class="navbar">
-                <a href="../test.html" class="logo">Portfólio<span>.</span></a>
+                <a href="../index.html" class="logo">Portfólio<span></span></a>
                 <ul class="nav-links">
                      <li><a href="../index.html#home">Home</a></li>
                     <li><a href="../index.html#about">Sobre</a></li>
