--- a/materias/projeto.html
+++ b/materias/projeto.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>João Neves</title>
+    <title>Projeto Integrador  | Portfólio</title>
     <meta name="description"
         content="João Neves é o desenvolvedor Frontend e Designer UX/UI mais premiado do mundo, criando experiências digitais que transcendem o comum.">
 
@@ -19,7 +19,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
-
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -38,8 +37,8 @@
     <header>
         <div class="container header-container">
             <a href="#" class="logo">
-                <span class="logo-icon"><i class="fas fa-j"></i></span>
-                João Neves
+                <span class="logo-icon"><i class="fas fa-puzzle-piece"></i></span>
+                Projeto Integrador 
             </a>
             <nav class="nav-links">
                <a href="../index.html#hero" class="active">Início</a>
@@ -370,18 +369,19 @@
         <div class="container footer-container">
             <a href="#" class="footer-logo">
                 <div class="footer-logo-icon">
-                    <i class="fas fa-code"></i>
+                    <i class="fas fa-puzzle-piece"></i>
                 </div>
-                <span>Portfólio</span>
+                <span>Projeto Integrador </span>
             </a>
 
             <nav class="footer-nav">
                 <ul>
-                    <li><a href="index.html">Início</a></li>
-                    <li><a href="index.html#about">Sobre</a></li>
-                    <li><a href="index.html#services">Serviços</a></li>
-                    <li><a href="todos_projetos.html">Projetos</a></li>
-                    <li><a href="index.html#contact">Contato</a></li>
+                    <li><a href="../index.html#hero">Início</a></li>
+                    <li><a href="../index.html#about">Sobre</a></li>
+                    <li><a href="../index.html#services">Serviços</a></li>
+                    <li><a href="../index.html#projects">Projetos</a></li>
+                    <li><a href="../index.html#testimonials">Matérias</a></li>
+                    <li><a href="../index.html#contact">Contato</a></li>
                 </ul>
             </nav>
 
