--- a/projetos/todos_projetos.html
+++ b/projetos/todos_projetos.html
@@ -12,6 +12,7 @@
     <meta property="og:url" content="https://joaoneves.dev"> 
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="./portfolio.css">
+
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
@@ -99,18 +100,20 @@
                     <div class="portfolio-item" data-category="web">
                         <div class="portfolio-card">
                             <div class="portfolio-image">
-                                <img src="https://picsum.photos/800/600?random=1" alt="Projeto E-commerce">
+                                <img src="../img/tcc.PNG" alt="Projeto E-commerce">
                                 <div class="portfolio-overlay">
-                                    <a href="projetos/ecommerce.html" class="view-btn">Ver Detalhes</a>
+                                    <a href="./tcc.html" class="view-btn">Ver Detalhes</a>
                                 </div>
                             </div>
                             <div class="portfolio-info">
-                                <h3>Loja Virtual Moderna</h3>
-                                <p>E-commerce completo com carrinho, checkout e integração com pagamentos</p>
+                                <h3>GranjaEggMaster</h3>
+                                <p>Controle simples e eficiente da produção de ovos</p>
                                 <div class="portfolio-tags">
-                                    <span>React</span>
+                                    <span>Html</span>
+                                    <span>CSS</span>
+                                    <span>JavaScript</span>
                                     <span>Node.js</span>
-                                    <span>MongoDB</span>
+                                    <span>SupaBase</span>
                                 </div>
                             </div>
                         </div>
@@ -249,9 +252,7 @@
             </nav>
             <div class="footer-social social-links">
                 <a href="https://linkedin.com/in/joaoneves" target="_blank" aria-label="LinkedIn de João Neves"><i class="fab fa-linkedin-in"></i></a>
-                <a href="https://github.com/joaoneves" target="_blank" aria-label="GitHub de João Neves"><i class="fab fa-github"></i></a>
-                <a href="https://twitter.com/joaoneves" target="_blank" aria-label="Twitter de João Neves"><i class="fab fa-twitter"></i></a>
-                <a href="https://behance.net/joaoneves" target="_blank" aria-label="Behance de João Neves"><i class="fab fa-behance"></i></a>
+                <a href="https://github.com/Nevez06" target="_blank" aria-label="GitHub de João Neves"><i class="fab fa-github"></i></a>
             </div>
             <p class="footer-bottom-text">&copy; 2025 João Neves. Todos os direitos reservados. Feito com paixão e tecnologia em Jales, SP.</p>
         </div>
