--- a/materias/principal.html
+++ b/materias/principal.html
@@ -91,6 +91,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 85%"></div></div>
                             </li>
                         </ul>
+                        <a href="./pw.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -109,6 +110,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 90%"></div></div>
                             </li>
                         </ul>
+                         <a href="./mobile.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
