--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>João Neves</title>
     <meta name="description"
-        content="João Neves é o desenvolvedor Frontend e Designer UX/UI mais premiado do mundo, criando experiências digitais que transcendem o comum.">
+        content="João Neves é o desenvolvedor Frontend e Designer UX/UI , criando experiências digitais que transcendem o comum.">
 
-    <meta property="og:title" content="João Neves | Portfólio de Classe Mundial – Onde a Inovação Ganha Vida">
+    <meta property="og:title" content="João Neves | Meu portfólio  – Onde a Inovação Ganha Vida">
     <meta property="og:description"
         content="Explore o universo de João Neves: Projetos inovadores, design de vanguarda e a mente por trás das experiências digitais mais impactantes do mercado.">
     <meta property="og:image" content="https://picsum.photos/1200/630?random=1">
@@ -35,11 +35,11 @@
 <body>
     <header>
         <div class="container header-container">
-            <a href="#" class="logo">
+            <a href="./img/logo.png" class="logo">
                 <span class="logo-icon"><i class="fas fa-j"></i></span>
                 João Neves
             </a>
-            <nav class="nav-links">
+           <nav class="nav-links">
                 <a href="#hero" class="active">Início</a>
                 <a href="#about">Sobre</a>
                 <a href="#services">Serviços</a>
@@ -51,27 +51,26 @@
             <button class="theme-toggle" aria-label="Alternar tema">
                 <i class="fas fa-moon"></i>
             </button>
-            <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
-                <i class="fas fa-bars"></i>
-            </button>
+             <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
+            <i class="fas fa-bars"></i>
+        </button>
         </div>
     </header>
 
-    <div class="nav-overlay">
+   <div class="nav-overlay-mobile">
         <button class="close-btn" aria-label="Fechar menu mobile">
             <i class="fas fa-times"></i>
         </button>
-        <nav class="nav-links-mobile">
-            <a href="#hero">Início</a>
-            <a href="#about">Sobre</a>
-            <a href="#services">Serviços</a>
-            <a href="#projects">Projetos</a>
-            <a href="#testimonials">Matérias</a>
-            <a href="#blog">Blog</a>
-            <a href="#contact">Contato</a>
+        <nav class="nav-links-mobile-list">
+             <a href="#hero" class="active">Início</a>
+                <a href="#about">Sobre</a>
+                <a href="#services">Serviços</a>
+                <a href="#projects">Projetos</a>
+                <a href="#testimonials">Matérias</a>
+                <a href="#blog">Blog</a>
+                <a href="#contact">Contato</a>
         </nav>
-        <button class="theme-toggle" aria-label="Alternar tema">
-            <i class="fas fa-moon"></i>
+    
         </button>
     </div>
 
@@ -97,7 +96,7 @@
             <div class="hero-image">
                 <div class="hero-image-wrapper">
                     <img src="https://picsum.photos/600/750?random=3"
-                        alt="Foto de João Neves, um especialista em design e desenvolvimento digital.">
+                        alt="">
                 </div>
                 <div class="hero-image-decor"></div>
             </div>
@@ -125,20 +124,19 @@
                     de código, é pensada para otimizar a usabilidade e a estética, resultando em produtos digitais que
                     não só funcionam perfeitamente, mas também <strong>inspiram e deixam uma marca</strong>.</p>
                 <div class="skills">
-                    <h4>Minhas Habilidades Insuperáveis:</h4>
+                    <h4>Minhas Habilidades:</h4>
                     <ul class="skills-list">
-                        <li class="skill-item"><i class="fab fa-react"></i> React.js (Master)</li>
-                        <li class="skill-item"><i class="fab fa-vuejs"></i> Vue.js (Master)</li>
-                        <li class="skill-item"><i class="fab fa-angular"></i> Angular (Proficiente)</li>
+                        <li class="skill-item"><i class="fab fa-react"></i> React.js </li>
+
                         <li class="skill-item"><i class="fab fa-js"></i> JavaScript (TypeScript, ESNext)</li>
-                        <li class="skill-item"><i class="fab fa-node-js"></i> Node.js (Fullstack)</li>
-                        <li class="skill-item"><i class="fab fa-sass"></i> SASS/LESS</li>
-                        <li class="skill-item"><i class="fab fa-figma"></i> Figma / Sketch / Adobe XD</li>
-                        <li class="skill-item"><i class="fas fa-palette"></i> UI/UX Design (Especialista)</li>
-                        <li class="skill-item"><i class="fas fa-bezier-curve"></i> Motion Design (Avançado)</li>
+                        <li class="skill-item"><i class="fab fa-node-js"></i> Node.js </li>
+
+                        <li class="skill-item"><i class="fab fa-figma"></i> Figma / Adobe XD</li>
+                        <li class="skill-item"><i class="fas fa-palette"></i> UI/UX Design</li>
+
                         <li class="skill-item"><i class="fas fa-mobile-alt"></i> Design Responsivo</li>
                         <li class="skill-item"><i class="fas fa-server"></i> Otimização de Performance</li>
-                        <li class="skill-item"><i class="fas fa-cloud"></i> AWS / Azure / GCP</li>
+
                     </ul>
                 </div>
             </div>
@@ -213,22 +211,22 @@
                         <div class="project-links">
                             <a href="https://nevez06.github.io/Granja/" class="project-link" aria-label="Ver Projeto"><i
                                     class="fas fa-external-link-alt"></i></a>
-                            <a href="https://github.com/Nevez06/Granja.git" class="project-link" aria-label="Ver Código"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Nevez06/Granja.git" class="project-link"
+                                aria-label="Ver Código"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
                 <div class="project-card">
-                    <img src="https://picsum.photos/700/500?random=6"
+                    <img src="./img/info.PNG"
                         alt="Dashboard analítico com gráficos e dados financeiros.">
                     <div class="project-overlay">
-                        <span class="project-category">SaaS Financeiro</span>
-                        <h3 class="project-title">Plataforma Analítica FinTrack</h3>
-                        <p class="project-description">Desenvolvi a interface intuitiva para o FinTrack, uma ferramenta
-                            SaaS que simplificou a análise de dados financeiros para milhares de empresas.</p>
+                        <span class="project-category">Info Cursos</span>
+                        <h3 class="project-title">Plataforma de Cursos em Tecnologia</h3>
+                        <p class="project-description">O InfoCursos é um sistema educacional focado em cursos de tecnologia da informação.</p>
                         <div class="project-links">
-                            <a href="#" class="project-link" aria-label="Ver Projeto"><i
+                            <a href="https://nevez06.github.io/infocursos/" class="project-link" aria-label="Ver Projeto"><i
                                     class="fas fa-external-link-alt"></i></a>
-                            <a href="#" class="project-link" aria-label="Ver Código"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/Nevez06/infocursos.git" class="project-link" aria-label="Ver Código"><i class="fab fa-github"></i></a>
                         </div>
                     </div>
                 </div>
@@ -427,14 +425,14 @@
                         <div class="contact-icon"><i class="fas fa-envelope"></i></div>
                         <div class="contact-texto">
                             <h4>Email:</h4>
-                            <p><a href="mailto:joaoneves@email.com">joaoneves@email.com</a></p>
+                            <p><a href="mailto:joaoneves@email.com">joaoantonioneves487@email.com</a></p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <div class="contact-icon"><i class="fas fa-phone-alt"></i></div>
                         <div class="contact-texto">
                             <h4>Telefone:</h4>
-                            <p><a href="tel:+5517998765432">+55 (17) 99876-5432</a></p>
+                            <p><a href="tel:+5517998765432">+55 (17) 99779-3833</a></p>
                         </div>
                     </div>
                 </div>
@@ -457,7 +455,7 @@
                             required>
                     </div>
                     <div class="form-group">
-                        <label for="email">Seu Melhor Email:</label>
+                        <label for="email">Seu Email:</label>
                         <input type="email" id="email" name="email" class="form-control"
                             placeholder="Ex: seuemail@dominio.com" required>
                     </div>
@@ -505,8 +503,7 @@
                 <a href="https://behance.net/joaoneves" target="_blank" aria-label="Behance de João Neves"><i
                         class="fab fa-behance"></i></a>
             </div>
-            <p class="footer-bottom-text">&copy; 2025 João Neves. Todos os direitos reservados. Feito com paixão e
-                tecnologia em Jales, SP.</p>
+            <p class="footer-bottom-text">&copy; 2025 João Neves. Todos os direitos reservados.</p>
         </div>
     </footer>
 
