--- a/materias/projeto.html
+++ b/materias/projeto.html
@@ -40,39 +40,38 @@
                 <span class="logo-icon"><i class="fas fa-puzzle-piece"></i></span>
                 Projeto Integrador 
             </a>
-            <nav class="nav-links">
-               <a href="../index.html#hero" class="active">Início</a>
+           <nav class="nav-links">
+                <a href="../index.html#hero" class="active">Início</a>
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-               <a href="../materias/principal.html">Matérias</a>
+                <a href="../materias/principal.html">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
             </nav>
             <button class="theme-toggle" aria-label="Alternar tema">
                 <i class="fas fa-moon"></i>
             </button>
-            <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
-                <i class="fas fa-bars"></i>
-            </button>
+             <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
+            <i class="fas fa-bars"></i>
+        </button>
         </div>
     </header>
 
-    <div class="nav-overlay">
+   <div class="nav-overlay-mobile">
         <button class="close-btn" aria-label="Fechar menu mobile">
             <i class="fas fa-times"></i>
         </button>
-        <nav class="nav-links-mobile">
-           <a href="../index.html#hero" class="active">Início</a>
+        <nav class="nav-links-mobile-list">
+             <a href="../index.html#hero" class="active">Início</a>
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-               <a href="../materias/principal.html">Matérias</a>
+                <a href="../materias/principal.html">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
         </nav>
-        <button class="theme-toggle" aria-label="Alternar tema">
-            <i class="fas fa-moon"></i>
+    
         </button>
     </div>
 
@@ -357,7 +356,7 @@
                 <p class="content-text">
                     Dominar essas ferramentas é essencial para qualquer desenvolvedor de software profissional.
                 </p>
-                <a href="#" class="btn btn-primary">
+                <a href="https://github.com/Nevez06" class="btn btn-primary">
                     <i class="fab fa-github"></i> Ver Atividade no GitHub
                 </a>
             </div>
