--- a/projetos/todos_projetos.html
+++ b/projetos/todos_projetos.html
@@ -40,34 +40,33 @@
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-               <a href="../materias/principal.html">Matérias</a>
+                <a href="../materias#testimonials">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
             </nav>
             <button class="theme-toggle" aria-label="Alternar tema">
                 <i class="fas fa-moon"></i>
             </button>
-            <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
-                <i class="fas fa-bars"></i>
-            </button>
+             <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
+            <i class="fas fa-bars"></i>
+        </button>
         </div>
     </header>
 
-    <div class="nav-overlay">
+   <div class="nav-overlay-mobile">
         <button class="close-btn" aria-label="Fechar menu mobile">
             <i class="fas fa-times"></i>
         </button>
-        <nav class="nav-links-mobile">
-            <a href="../index.html#hero" class="active">Início</a>
+        <nav class="nav-links-mobile-list">
+             <a href="../index.html#hero" class="active">Início</a>
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-                <a href="../materias/principal.html">Matérias</a>
+                <a href="../materias#testimonials">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
         </nav>
-        <button class="theme-toggle" aria-label="Alternar tema">
-            <i class="fas fa-moon"></i>
+    
         </button>
     </div>
 
@@ -81,17 +80,7 @@
             <div class="hero-shape"></div>
         </section>
 
-        <section class="portfolio-filter">
-            <div class="container">
-                <div class="filter-options">
-                    <button class="filter-btn active" data-filter="all">Todos</button>
-                    <button class="filter-btn" data-filter="web">Web</button>
-                    <button class="filter-btn" data-filter="mobile">Mobile</button>
-                    <button class="filter-btn" data-filter="design">Design</button>
-                    <button class="filter-btn" data-filter="fullstack">Fullstack</button>
-                </div>
-            </div>
-        </section>
+        
 
         <section class="portfolio-grid">
             <div class="container">
