--- a/materias/bancoDados.html
+++ b/materias/bancoDados.html
@@ -41,40 +41,37 @@
                 <span class="logo-icon"><i class="fas fa-database"></i></span>
                 <span>Banco de Dados</span>
            </a>
-            <nav class="nav-links">
-               <a href="../index.html#hero" class="active">Início</a>
+           <nav class="nav-links">
+                <a href="../index.html#hero" class="active">Início</a>
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-               <a href="../materias/principal.html">Matérias</a>
+                <a href="../materias/principal.html">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
             </nav>
             <button class="theme-toggle" aria-label="Alternar tema">
                 <i class="fas fa-moon"></i>
             </button>
-            <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
-                <i class="fas fa-bars"></i>
-            </button>
+             <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
+            <i class="fas fa-bars"></i>
+        </button>
         </div>
     </header>
 
-    <div class="nav-overlay">
+   <div class="nav-overlay-mobile">
         <button class="close-btn" aria-label="Fechar menu mobile">
             <i class="fas fa-times"></i>
         </button>
-        <nav class="nav-links-mobile">
-           <a href="../index.html#hero" class="active">Início</a>
+        <nav class="nav-links-mobile-list">
+             <a href="../index.html#hero" class="active">Início</a>
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-               <a href="../materias/principal.html">Matérias</a>
+                <a href="../materias/principal.html">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
         </nav>
-        <button class="theme-toggle" aria-label="Alternar tema">
-            <i class="fas fa-moon"></i>
-        </button>
     </div>
 
     <!-- Database Content Section -->
@@ -272,12 +269,13 @@
             
             <nav class="footer-nav">
                 <ul>
-                      <li><a href="../index.html#hero">Início</a></li>
-                    <li><a href="../index.html#about">Sobre</a></li>
-                    <li><a href="../index.html#services">Serviços</a></li>
-                    <li><a href="../index.html#projects">Projetos</a></li>
-                    <li><a href="../index.html#testimonials">Matérias</a></li>
-                    <li><a href="../index.html#contact">Contato</a></li>
+                      <a href="../index.html#hero" class="active">Início</a>
+                <a href="../index.html#about">Sobre</a>
+                <a href="../index.html#services">Serviços</a>
+                <a href="../index.html#projects">Projetos</a>
+               <a href="../materias/principal.html">Matérias</a>
+                <a href="../index.html#blog">Blog</a>
+                <a href="../index.html#contact">Contato</a>
                 </ul>
             </nav>
             
