--- a/materias/principal.html
+++ b/materias/principal.html
@@ -39,34 +39,33 @@
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-                <a href="../index.html#testimonials">Matérias</a>
+                <a href="../materias/principal.html">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
             </nav>
             <button class="theme-toggle" aria-label="Alternar tema">
                 <i class="fas fa-moon"></i>
             </button>
-            <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
-                <i class="fas fa-bars"></i>
-            </button>
+             <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
+            <i class="fas fa-bars"></i>
+        </button>
         </div>
     </header>
 
-    <div class="nav-overlay">
+   <div class="nav-overlay-mobile">
         <button class="close-btn" aria-label="Fechar menu mobile">
             <i class="fas fa-times"></i>
         </button>
-        <nav class="nav-links-mobile">
-            <a href="../index.html#hero" class="active">Início</a>
+        <nav class="nav-links-mobile-list">
+             <a href="../index.html#hero" class="active">Início</a>
                 <a href="../index.html#about">Sobre</a>
                 <a href="../index.html#services">Serviços</a>
                 <a href="../index.html#projects">Projetos</a>
-                <a href="../index.html#testimonials">Matérias</a>
+                <a href="../materias/principal.html">Matérias</a>
                 <a href="../index.html#blog">Blog</a>
                 <a href="../index.html#contact">Contato</a>
         </nav>
-        <button class="theme-toggle" aria-label="Alternar tema">
-            <i class="fas fa-moon"></i>
+    
         </button>
     </div>
 
@@ -171,6 +170,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 82%"></div></div>
                             </li>
                         </ul>
+                         <a href="./engenharia.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -189,6 +189,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 78%"></div></div>
                             </li>
                         </ul>
+                         <a href="./gestao.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -207,6 +208,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 85%"></div></div>
                             </li>
                         </ul>
+                         <a href="./interacao.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -225,6 +227,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 80%"></div></div>
                             </li>
                         </ul>
+                         <a href="./matematica.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -243,6 +246,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 78%"></div></div>
                             </li>
                         </ul>
+                         <a href="./sistemas.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -261,6 +265,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 80%"></div></div>
                             </li>
                         </ul>
+                         <a href="./inteligencia.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -279,6 +284,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 80%"></div></div>
                             </li>
                         </ul>
+                         <a href="./modelo.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
@@ -297,6 +303,7 @@
                                 <div class="skill-bar"><div class="skill-level" style="width: 85%"></div></div>
                             </li>
                         </ul>
+                         <a href="./ingles.html" class="view-btn">Ver Detalhes</a>
                     </div>
                 </div>
 
