--- a/projetos/tcc.html
+++ b/projetos/tcc.html
@@ -40,39 +40,38 @@
                 <span class="logo-icon"><i class="fas fa-j"></i></span>
                 João Neves
             </a>
-            <nav class="nav-links">
-                <a href="#hero" class="active">Início</a>
-                <a href="#about">Sobre</a>
-                <a href="#services">Serviços</a>
-                <a href="#projects">Projetos</a>
-                <a href="#testimonials">Matérias</a>
-                <a href="#blog">Blog</a>
-                <a href="#contact">Contato</a>
+           <nav class="nav-links">
+                <a href="../index.html#hero" class="active">Início</a>
+                <a href="../index.html#about">Sobre</a>
+                <a href="../index.html#services">Serviços</a>
+                <a href="./todos_projetos.html">Projetos</a>
+                <a href="../materias#testimonials">Matérias</a>
+                <a href="../index.html#blog">Blog</a>
+                <a href="../index.html#contact">Contato</a>
             </nav>
             <button class="theme-toggle" aria-label="Alternar tema">
                 <i class="fas fa-moon"></i>
             </button>
-            <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
-                <i class="fas fa-bars"></i>
-            </button>
+             <button class="mobile-menu-btn" aria-label="Abrir menu mobile">
+            <i class="fas fa-bars"></i>
+        </button>
         </div>
     </header>
 
-    <div class="nav-overlay">
+   <div class="nav-overlay-mobile">
         <button class="close-btn" aria-label="Fechar menu mobile">
             <i class="fas fa-times"></i>
         </button>
-        <nav class="nav-links-mobile">
-            <a href="#hero">Início</a>
-            <a href="#about">Sobre</a>
-            <a href="#services">Serviços</a>
-            <a href="#projects">Projetos</a>
-            <a href="#testimonials">Matérias</a>
-            <a href="#blog">Blog</a>
-            <a href="#contact">Contato</a>
+        <nav class="nav-links-mobile-list">
+             <a href="../index.html#hero" class="active">Início</a>
+                <a href="../index.html#about">Sobre</a>
+                <a href="../index.html#services">Serviços</a>
+                <a href="../index.html#projects">Projetos</a>
+                <a href="../materias#testimonials">Matérias</a>
+                <a href="../index.html#blog">Blog</a>
+                <a href="../index.html#contact">Contato</a>
         </nav>
-        <button class="theme-toggle" aria-label="Alternar tema">
-            <i class="fas fa-moon"></i>
+    
         </button>
     </div>
     <main class="projeto-detalhe">
